# pal-fishing

./: .gitignore  README.md  analyze.py  analyze2.py  capture.py  controller.py  detect.py  diag_float.py  diag_green.py  fishing.pyw  fishing.spec  mark_ui.py  overlay.py  pyproject.toml  realtime.py  run.bat  run.pyw  sample_float.py  sample_green.py  test_physics.py  钓鱼助手.vbs
.claude/: settings.local.json
ui/: hotkeys.py  mainwin.py  params.py  preview.py  result.py  sampler.py
